--- a/src/style.css
+++ b/src/style.css
@@ -4,8 +4,9 @@
   font-weight: 400;
 
   color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+  /* color: rgba(255, 255, 255, 0.87); */
+  color: rgb(27, 27, 27);
+  background-color: #E7DCC9;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -17,6 +18,7 @@
 body {
   margin: 0;
   overflow-x: hidden;
+
   
 }
 
